# Chostty

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PKGBUILD.template  README.md  limux-layout-persistence-plan.md  shortcut-remap-plan.md  terminal-keybinds-settings-plan.md
.github/workflows/: aur-publish.yml
docs/: ghostty-upstream-rebase.md  shortcut-remap-testing.md
docs/superpowers/plans/: 2026-04-17-ghostty-scrollbars.md  2026-04-17-persistent-logging.md
docs/superpowers/specs/: 2026-04-17-ghostty-scrollbars-design.md  2026-04-17-persistent-logging-design.md
patches/ghostty-upstream-rebase/: 0001-Add-Linux-platform-support-to-embedded-apprt.patch  0002-Add-display-lifecycle-API-and-fix-drawFrame-sync-for.patch  0003-embedded-gate-paste-on-text-clipboard-availability.patch
rust/chostty-cli/: Cargo.toml
rust/chostty-cli/src/: main.rs
rust/chostty-control/: Cargo.toml
rust/chostty-control/src/: ffi.rs  lib.rs  server.rs  socket_path.rs
rust/chostty-control/tests/: socket_roundtrip.rs
rust/chostty-core/: Cargo.toml
rust/chostty-core/src/: lib.rs
rust/chostty-ghostty-sys/: Cargo.toml  build.rs
rust/chostty-ghostty-sys/src/: lib.rs
rust/chostty-host-linux/: Cargo.toml  dev.turbinebmw.chostty.desktop  dev.turbinebmw.chostty.metainfo.xml
rust/chostty-host-linux/src/: app_config.rs  control_bridge.rs  keybind_editor.rs  layout_state.rs  logging.rs  main.rs  notification_sound.rs  open_path_dialog.rs  pane.rs  settings_editor.rs  shortcut_config.rs  split_tree.rs  terminal.rs  window.rs
rust/chostty-protocol/: Cargo.toml
rust/limux-cli/: Cargo.toml
rust/limux-cli/src/: main.rs
rust/limux-control/: Cargo.toml
rust/limux-control/src/: ffi.rs  lib.rs  server.rs  socket_path.rs
rust/limux-control/tests/: socket_roundtrip.rs
rust/limux-core/: Cargo.toml
rust/limux-core/src/: lib.rs
rust/limux-ghostty-sys/: Cargo.toml  build.rs
rust/limux-ghostty-sys/src/: lib.rs
rust/limux-host-linux/: Cargo.toml  limux.desktop
rust/limux-host-linux/src/: app_config.rs  control_bridge.rs  keybind_editor.rs  layout_state.rs  lib.rs  main.rs  notification_sound.rs  open_path_dialog.rs  pane.rs  settings_editor.rs  shortcut_config.rs  split_tree.rs  terminal.rs  window.rs
rust/limux-protocol/: Cargo.toml
rust/limux-protocol/src/: lib.rs
scripts/: install.sh  package.sh  update_ghostty.sh
