[workspace]
members = [
  "rust/chostty-protocol",
  "rust/chostty-core",
  "rust/chostty-control",
  "rust/chostty-cli",
  "rust/chostty-ghostty-sys",
  "rust/chostty-host-linux",
]
resolver = "2"

[workspace.package]
authors = ["chostty contributors"]
edition = "2021"
license = "MIT"
version = "0.1.12"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
