[package]
name = "chostty-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
chostty-core = { path = "../chostty-core" }
chostty-protocol = { path = "../chostty-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
