[package]
name = "chostty-host-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chostty"
path = "src/main.rs"

[features]
default = ["webkit"]
webkit = ["dep:webkit6"]

[dependencies]
gtk4 = { version = "0.11", features = ["v4_10"] }
gdk4-wayland = "0.11"
libadwaita = { version = "0.9", features = ["v1_5"] }
uuid = { version = "1", features = ["v4"] }
webkit6 = { version = "0.6", optional = true }
chostty-control = { path = "../chostty-control" }
chostty-protocol = { path = "../chostty-protocol" }
chostty-ghostty-sys = { path = "../chostty-ghostty-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
shell-quote = { version = "0.7.2", default-features = false, features = ["bash"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
