[package]
name = "limux-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
limux-control = { path = "../limux-control" }
limux-protocol = { path = "../limux-protocol" }
serde_json.workspace = true
tokio.workspace = true
