[package]
name = "limux-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
limux-core = { path = "../limux-core" }
limux-protocol = { path = "../limux-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
