[package]
name = "limux-host-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "limux"
path = "src/main.rs"

[features]
default = ["webkit"]
webkit = ["dep:webkit6"]

[dependencies]
gtk4 = { version = "0.11", features = ["v4_10"] }
gdk4-wayland = "0.11"
libadwaita = { version = "0.9", features = ["v1_5"] }
uuid = { version = "1", features = ["v4"] }
webkit6 = { version = "0.6", optional = true }
limux-control = { path = "../limux-control" }
limux-protocol = { path = "../limux-protocol" }
limux-ghostty-sys = { path = "../limux-ghostty-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
shell-quote = { version = "0.7.2", default-features = false, features = ["bash"] }

[dev-dependencies]
tempfile.workspace = true
